--- a/.github/workflows/labeler-testing.yml
+++ b/.github/workflows/labeler-testing.yml
@@ -14,7 +14,7 @@ jobs:
         shell: pwsh
         id: loader
         run: |
-          $issue = Get-Content .github/workflows/test-issue.json
+          $issue = Get-Content /.github/workflows/test-issue.json
           "GITHUB_ISSUE=$issue" >> "$GITHUB_OUTPUT"
       - name: Do something when an issue is opened
         shell: pwsh
