--- a/action.yml
+++ b/action.yml
@@ -18,13 +18,13 @@ runs:
   steps:
 
     - name: Set Greeting
-      run: echo "Hello $LABEL_PATTERN."
+      run: echo "Hello $env:LABEL_PATTERN."
       shell: pwsh
       env:
         LABEL_PATTERN: ${{ inputs.label-pattern }}
 
     - name: Set GitHub Path
-      run: Get-ChildItem -Path "$GITHUB_ACTION_PATH"
+      run: Get-ChildItem -Path "$env:GITHUB_ACTION_PATH"
       shell: pwsh
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
