--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,9 @@ runs:
       #   GITHUB_ISSUE: ${{ toJson(github.event.issue) }}
       run: |
         $issue = Get-Content "${{ github.action_path }}/.github/workflows/test-issue.json"
+        Write-Host $issue
+        $issueObject = @{ issue = $issue } | ConvertTo-Json
+        Write-Host $issueObject
         "GITHUB_ISSUE=$issue" >> "$GITHUB_OUTPUT"
     
     - name: Do something when an issue is opened
