--- a/action.yml
+++ b/action.yml
@@ -23,8 +23,8 @@ runs:
       # env:
       #   GITHUB_ISSUE: ${{ toJson(github.event.issue) }}
       run: |
-        $issue = Get-Content -Raw "${{ github.action_path }}/.github/workflows/test-issue.json" | ConvertTo-Json
-        "GITHUB_ISSUE=$issue" >> "$GITHUB_OUTPUT"
+        $issue = Get-Content -Raw "${{ github.action_path }}/.github/workflows/test-issue.json"
+        "GITHUB_ISSUE=$issue" >> $env:GITHUB_OUTPUT
     
     - name: Do something when an issue is opened
       id: get-label
