--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ runs:
       # env:
       #   GITHUB_ISSUE: ${{ toJson(github.event.issue) }}
       run: |
-        $issue = Get-Content -Raw "${{ github.action_path }}/.github/workflows/test-issue.json"
+        $issue = Get-Content -Raw "${{ github.action_path }}/.github/workflows/test-issue.json" | ConvertTo-Json
         "GITHUB_ISSUE=$issue" >> $env:GITHUB_OUTPUT
     
     - name: Do something when an issue is opened
