--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ runs:
       run: |
         $repoUrl = "${{ github.repositoryUrl }}"
         Write-Host "$env:GITHUB_ISSUE"
-        $issue = "$env:GITHUB_ISSUE" | ConvertFrom-Json
+        $issue = "$env:GITHUB_ISSUE" | ConvertFrom-Json | ConvertFrom-Json
         
         Write-Host "Repository URL: $repoUrl"
         Write-Host "Issue Url: $($issue.html_url)"
