--- a/.github/workflows/labeler-testing.yml
+++ b/.github/workflows/labeler-testing.yml
@@ -10,6 +10,16 @@ jobs:
   test-workflow:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Read the test issue json
+        shell: pwsh
+        id: loader
+        run: |
+          $issue = Get-Content -Raw "${{ github.action_path }}/.github/workflows/test-issue.json"
+          $issue = $env:ISSUE_JSON | Join-String -Separator " "
+          "GITHUB_ISSUE=$issue" >> "$GITHUB_OUTPUT"
       - uses: mattleibow/labeled-by-ai@dev/workflow-testing
         with:
           label-pattern: '^area/.*'
+          issue-json: ${{ steps.loader.outputs.GITHUB_ISSUE }}
