--- a/.github/workflows/labeler-testing.yml
+++ b/.github/workflows/labeler-testing.yml
@@ -17,11 +17,9 @@ jobs:
         id: loader
         run: |
           $issue = Get-Content -Raw ".github/workflows/test-issue.json"
-          $issue = $env:ISSUE_JSON | Join-String -Separator " "
+          $issue = $issue | Join-String -Separator " "
           "GITHUB_ISSUE=$issue" >> "$GITHUB_OUTPUT"
-          echo $issue
-          echo $env:GITHUB_OUTPUT
       - uses: mattleibow/labeled-by-ai@dev/workflow-testing
         with:
           label-pattern: '^area/.*'
-          issue-json: ${{ steps.loader.outputs.GITHUB_ISSUE }}
+          issue-json: ${{ steps.loader.outputs.GITHUB_ISSUE }} # testing pipeline only
