--- a/action.yml
+++ b/action.yml
@@ -27,11 +27,11 @@ runs:
       env:
         ISSUE_JSON: ${{ inputs.issue-json }}
       run: |
+        # convert the issue json to a single line string 
+        # in the GITHUB_ISSUE_DEPRECATED output
+
         $issue = $env:ISSUE_JSON | Join-String -Separator " "
         "GITHUB_ISSUE_DEPRECATED=$issue" >> $env:GITHUB_OUTPUT
-        echo $issue
-        echo $env:GITHUB_OUTPUT
-        Get-Content $env:GITHUB_OUTPUT
     
     - name: Do something when an issue is opened
       id: get-label
@@ -42,13 +42,17 @@ runs:
         GH_TOKEN: ${{ github.token }}
         LABEL_PATTERN: ${{ inputs.label-pattern }}
       run: |
-        Write-Host "$env:GITHUB_ISSUE"
-        Write-Host "$env:GITHUB_ISSUE_DEPRECATED"
+        # Parse the issue json from the event or fall back
+        # to the deprecated method of reading the issue json
+        # from the environment variable
         if (-not $env:GITHUB_ISSUE) {
           $issue = "$env:GITHUB_ISSUE_DEPRECATED" | ConvertFrom-Json
         } else {
           $issue = "$env:GITHUB_ISSUE" | ConvertFrom-Json
         }
+        Write-Host "$env:GITHUB_ISSUE"
+        Write-Host "$env:GITHUB_ISSUE_DEPRECATED"
+        Write-Host "$issue"
         
         $repoUrl = "${{ github.repositoryUrl }}"
 
