--- a/action.yml
+++ b/action.yml
@@ -20,27 +20,14 @@ runs:
   using: "composite"
   steps:
 
-    - name: Read the test issue json if it is provided
-      shell: pwsh
-      id: loader
-      if: ${{ inputs.issue-json != null }}
-      env:
-        ISSUE_JSON: ${{ inputs.issue-json }}
-      run: |
-        # convert the issue json to a single line string 
-        # in the GITHUB_ISSUE_DEPRECATED output
-
-        $issue = $env:ISSUE_JSON | Join-String -Separator " "
-        "GITHUB_ISSUE_DEPRECATED=$issue" >> $env:GITHUB_OUTPUT
-    
     - name: Do something when an issue is opened
       id: get-label
       shell: pwsh
       env:
-        GITHUB_ISSUE: ${{ toJson(github.event.issue) }}
-        GITHUB_ISSUE_DEPRECATED: ${{ steps.loader.outputs.GITHUB_ISSUE_DEPRECATED }}
-        GH_TOKEN: ${{ github.token }}
-        LABEL_PATTERN: ${{ inputs.label-pattern }}
+        GH_TOKEN: ${{ github.token }}                       # for the gh CLI tool
+        GITHUB_ISSUE: ${{ toJson(github.event.issue) }}     # the issue json from the event
+        LABEL_PATTERN: ${{ inputs.label-pattern }}          # the label pattern to match
+        GITHUB_ISSUE_DEPRECATED: ${{ inputs.issue-json }}   # testing purposes only
       run: |
         # Parse the issue json from the event or fall back
         # to the deprecated method of reading the issue json
