--- a/action.yml
+++ b/action.yml
@@ -29,6 +29,8 @@ runs:
         LABEL_PATTERN: ${{ inputs.label-pattern }}          # the label pattern to match
         GITHUB_ISSUE_DEPRECATED: ${{ inputs.issue-json }}   # testing purposes only
       run: |
+        Write-Host "GITHUB_ISSUE: $env:GITHUB_ISSUE"
+        Write-Host "GITHUB_ISSUE_DEPRECATED: $env:GITHUB_ISSUE_DEPRECATED"
         # Parse the issue json from the event or fall back
         # to the deprecated method of reading the issue json
         # from the environment variable
@@ -37,9 +39,7 @@ runs:
         } else {
           $issue = "$env:GITHUB_ISSUE" | ConvertFrom-Json
         }
-        Write-Host "$env:GITHUB_ISSUE"
-        Write-Host "$env:GITHUB_ISSUE_DEPRECATED"
-        Write-Host "$issue"
+        Write-Host "issue: $issue"
         
         $repoUrl = "${{ github.repositoryUrl }}"
 
