--- a/.github/workflows/labeler-testing.yml
+++ b/.github/workflows/labeler-testing.yml
@@ -18,11 +18,7 @@ jobs:
         run: |
           $issue = Get-Content ".github/workflows/test-issue.json"
           $issue = $issue | Join-String -Separator " "
-          "GITHUB_ISSUE=$issue" >> "$GITHUB_OUTPUT"
-      - name: Test the testing test
-        shell: pwsh
-        run: |
-          echo ">>> ${{ steps.loader.outputs.GITHUB_ISSUE }} "
+          "GITHUB_ISSUE=$issue" >> $env:GITHUB_OUTPUT
       - uses: mattleibow/labeled-by-ai@dev/workflow-testing
         with:
           label-pattern: '^area/.*'
