--- a/.github/workflows/labeler-testing.yml
+++ b/.github/workflows/labeler-testing.yml
@@ -18,7 +18,12 @@ jobs:
         run: |
           $issue = Get-Content ".github/workflows/test-issue.json"
           $issue = $issue | Join-String -Separator " "
+          echo "GITHUB_ISSUE=$issue"
           "GITHUB_ISSUE=$issue" >> $env:GITHUB_OUTPUT
+      - name: Test the testing test
+        shell: pwsh
+        run: |
+          echo ">>> ${{ steps.loader.outputs.GITHUB_ISSUE }} "
       - uses: mattleibow/labeled-by-ai@dev/workflow-testing
         with:
           label-pattern: '^area/.*'
