--- a/action.yml
+++ b/action.yml
@@ -34,10 +34,9 @@ runs:
         # Parse the issue json from the event or fall back
         # to the deprecated method of reading the issue json
         # from the environment variable
-        if (-not $env:GITHUB_ISSUE) {
+        $issue = "$env:GITHUB_ISSUE" | ConvertFrom-Json
+        if (-not $issue) {
           $issue = "$env:GITHUB_ISSUE_DEPRECATED" | ConvertFrom-Json
-        } else {
-          $issue = "$env:GITHUB_ISSUE" | ConvertFrom-Json
         }
         Write-Host "issue: $issue"
         
