--- a/action.yml
+++ b/action.yml
@@ -36,6 +36,11 @@ runs:
         if (-not $issue) {
           $issue = "$env:GITHUB_ISSUE_DEPRECATED" | ConvertFrom-Json
         }
+
+        if (-not $issue) {
+          Write-Error "No issue was found to label."
+          exit 1
+        }
         
         $repoUrl = "${{ github.repositoryUrl }}"
 
@@ -52,6 +57,10 @@ runs:
         $labelsResult = gh label list --repo "$repoUrl" --json name --jq "$labelSelector"
         $labels = $labelsResult | ConvertFrom-Json
         Write-Output "::debug::$labels"
+        if (-not $labels) {
+          Write-Error "Failed to get labels from the repository."
+          exit 1
+        }
         $labelsNames = $labels | Select-Object -ExpandProperty name
 
         # Write-Output "::debug::Filtered Labels:"
@@ -70,14 +79,25 @@ runs:
         # Write-Output "::debug::Request Body:"
         # Write-Output "::debug::$body"
 
-        $response = Invoke-RestMethod `
+        $responseJson = Invoke-RestMethod `
           -Method Post `
           -Uri $uri `
           -Body $body `
           -ContentType 'application/json'
 
         # Write-Output "::debug::Response:"
-        # Write-Output "::debug::$response"
+        # Write-Output "::debug::$responseJson"
+
+        $response = $responseJson | ConvertFrom-Json
+        if (-not $response) {
+          Write-Error "Failed to get a response from the AI service."
+          exit 1
+        }
+
+        if (-not $response.label) {
+          Write-Warning "No labels matched the contents of this issue."
+          exit 0
+        }
 
         # TODO: Apply the labels to the issue
 
