--- a/action.yml
+++ b/action.yml
@@ -79,16 +79,15 @@ runs:
         # Write-Output "::debug::Request Body:"
         # Write-Output "::debug::$body"
 
-        $responseJson = Invoke-RestMethod `
+        $response = Invoke-RestMethod `
           -Method Post `
           -Uri $uri `
           -Body $body `
           -ContentType 'application/json'
 
         # Write-Output "::debug::Response:"
-        # Write-Output "::debug::$responseJson"
+        # Write-Output "::debug::$response"
 
-        $response = $responseJson | ConvertFrom-Json
         if (-not $response) {
           Write-Error "Failed to get a response from the AI service."
           exit 1
