--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,7 @@ runs:
   using: "composite"
   steps:
 
-    - name: Do something when an issue is opened
+    - name: Find the best label using AI
       id: get-label
       shell: pwsh
       env:
@@ -101,6 +101,16 @@ runs:
         Write-Output "Found a great label to apply to the issue: $($response.label)"
         Write-Output "The reasoning is: $($response.reason)"
 
-        # TODO: Apply the labels to the issue
+        "SELECTED_LABEL=$($response.label)" >> $env:GITHUB_OUTPUT
+        "SELECTED_REASON=$($response.reason)" >> $env:GITHUB_OUTPUT
 
-        echo "DONE!"
+    - name: Apply the label to the issue
+      shell: pwsh
+      id: apply-label
+      env:
+        GH_TOKEN: ${{ github.token }}
+        SELECTED_LABEL: ${{ steps.get-label.outputs.SELECTED_LABEL }}
+        SELECTED_REASON: ${{ steps.get-label.outputs.SELECTED_REASON }}
+      run: |
+        Write-Output "Found a great label to apply to the issue: $($env:SELECTED_LABEL)"
+        Write-Output "The reasoning is: $($env:SELECTED_REASON)"
