--- a/action.yml
+++ b/action.yml
@@ -29,6 +29,9 @@ runs:
         LABEL_PATTERN: ${{ inputs.label-pattern }}          # the label pattern to match
         GITHUB_ISSUE_DEPRECATED: ${{ inputs.issue-json }}   # testing purposes only
       run: |
+        "Find the best label using AI"
+
+        Write-Output "::group::Processing inputs..."
         # Parse the issue json from the event or fall back
         # to the deprecated method of reading the issue json
         # from the environment variable
@@ -39,6 +42,7 @@ runs:
 
         if (-not $issue) {
           Write-Error "No issue was found to label."
+          Write-Output "::endgroup::"
           exit 1
         }
         
@@ -48,10 +52,12 @@ runs:
         # Write-Output "::debug::GITHUB_ISSUE_DEPRECATED: $env:GITHUB_ISSUE_DEPRECATED"
         # Write-Output "::debug::issue: $issue"
 
-        Write-Output "::debug::Repository URL: $repoUrl"
-        Write-Output "::debug::Issue Url: $($issue.html_url)"
-        Write-Output "::debug::Issue Title: $($issue.title)"
+        Write-Output "Repository URL: $repoUrl"
+        Write-Output "Issue Url: $($issue.html_url)"
+        Write-Output "Issue Title: $($issue.title)"
+        Write-Output "::endgroup::"
 
+        Write-Output "::group::Loading labels..."
         $labelRegex = "$env:LABEL_PATTERN"
         $labelSelector = "[.[] | select(.name | test(`"$labelRegex`"))]"
         $labelsResult = gh label list --repo "$repoUrl" --json name --jq "$labelSelector"
@@ -63,9 +69,11 @@ runs:
         }
         $labelsNames = $labels | Select-Object -ExpandProperty name
 
-        # Write-Output "::debug::Filtered Labels:"
-        # Write-Output "::debug::$labelsNames"
+        Write-Output "Filtered Labels:"
+        Write-Output "$labelsNames"
+        Write-Output "::endgroup::"
 
+        Write-Output "::group::Asking the AI to find the best label..."
         $hostAddress = "https://labeled-by-ai.yellowhill-0060a70b.southafricanorth.azurecontainerapps.io"
         $uri = "$hostAddress/api/label"
         $bodyObj = @{
@@ -90,11 +98,13 @@ runs:
 
         if (-not $response) {
           Write-Error "Failed to get a response from the AI service."
+          Write-Output "::endgroup::"
           exit 1
         }
 
         if (-not $response.label) {
           Write-Warning "No labels matched the contents of this issue."
+          Write-Output "::endgroup::"
           exit 0
         }
 
@@ -103,6 +113,7 @@ runs:
 
         "SELECTED_LABEL=$($response.label)" >> $env:GITHUB_OUTPUT
         "SELECTED_REASON=$($response.reason)" >> $env:GITHUB_OUTPUT
+        Write-Output "::endgroup::"
 
     - name: Apply the label to the issue
       shell: pwsh
