--- a/.github/workflows/labeler-testing.yml
+++ b/.github/workflows/labeler-testing.yml
@@ -19,7 +19,7 @@ jobs:
           $issue = Get-Content ".github/workflows/test-issue.json"
           $issue = $issue | Join-String -Separator " "
           "GITHUB_ISSUE=$issue" >> $env:GITHUB_OUTPUT
-      - uses: mattleibow/labeled-by-ai@dev/workflow-testing
+      - uses: mattleibow/labeled-by-ai@dev/action-testing
         with:
           label-pattern: '^area/.*'
           issue-json: ${{ steps.loader.outputs.GITHUB_ISSUE }} # testing pipeline only
