--- a/.github/workflows/labeler-testing.yml
+++ b/.github/workflows/labeler-testing.yml
@@ -1,4 +1,4 @@
-name: Apply labels using AI
+name: Local Testing Workflow
 
 on:
   push:
@@ -10,16 +10,6 @@ jobs:
   test-workflow:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-      - name: Read the test issue json
+      - name: Do nothing
         shell: pwsh
-        id: loader
-        run: |
-          $issue = Get-Content ".github/workflows/test-issue.json"
-          $issue = $issue | Join-String -Separator " "
-          "GITHUB_ISSUE=$issue" >> $env:GITHUB_OUTPUT
-      - uses: mattleibow/labeled-by-ai@dev/action-testing
-        with:
-          label-pattern: '^area/.*'
-          issue-json: ${{ steps.loader.outputs.GITHUB_ISSUE }} # testing pipeline only
+        run: Write-Output "Not doing anything!"
