--- a/.github/workflows/labeler-testing.yml
+++ b/.github/workflows/labeler-testing.yml
@@ -10,6 +10,16 @@ jobs:
   test-workflow:
     runs-on: ubuntu-latest
     steps:
-      - name: Do nothing
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Read the test issue json
         shell: pwsh
-        run: Write-Output "Not doing anything!"
+        id: loader
+        run: |
+          $issue = Get-Content ".github/workflows/test-data/test-issue.json"
+          $issue = $issue | Join-String -Separator " "
+          "GITHUB_ISSUE=$issue" >> $env:GITHUB_OUTPUT
+      - uses: mattleibow/labeled-by-ai@dev/action-testing
+        with:
+          label-pattern: '^area/.*'
+          issue-json: ${{ steps.loader.outputs.GITHUB_ISSUE }} # testing pipeline only
