--- a/action.yml
+++ b/action.yml
@@ -119,6 +119,7 @@ runs:
         Write-Output "Found a great label to apply to the issue: $($response.label)"
         Write-Output "The reasoning is: $($response.reason)"
 
+        "ISSUE_NUMBER=$($issue.number)" >> $env:GITHUB_OUTPUT
         "SELECTED_LABEL=$($response.label)" >> $env:GITHUB_OUTPUT
         "SELECTED_REASON=$($response.reason)" >> $env:GITHUB_OUTPUT
         Write-Output "::endgroup::"
@@ -129,6 +130,7 @@ runs:
       if: ${{ inputs.apply-label == 'true' && steps.get-label.outputs.SELECTED_LABEL != null }}
       env:
         GH_TOKEN: ${{ github.token }}
+        ISSUE_NUMBER: ${{ steps.get-label.outputs.ISSUE_NUMBER }}
         SELECTED_LABEL: ${{ steps.get-label.outputs.SELECTED_LABEL }}
         SELECTED_REASON: ${{ steps.get-label.outputs.SELECTED_REASON }}
       run: |
@@ -137,7 +139,7 @@ runs:
         Write-Output "::group::Applying the label..."
 
         $repoUrl = "${{ github.repositoryUrl }}"
-        $issueNumber = "${{ github.event.issue.number }}"
+        $issueNumber = "$env:ISSUE_NUMBER"
         $label = "$env:SELECTED_LABEL"
 
         gh issue edit --repo "$repoUrl" $issueNumber --add-label "$label"
@@ -150,6 +152,7 @@ runs:
       if: ${{ inputs.add-comment == 'true' && steps.get-label.outputs.SELECTED_LABEL != null && steps.get-label.outputs.SELECTED_REASON != null }}
       env:
         GH_TOKEN: ${{ github.token }}
+        ISSUE_NUMBER: ${{ steps.get-label.outputs.ISSUE_NUMBER }}
         SELECTED_LABEL: ${{ steps.get-label.outputs.SELECTED_LABEL }}
         SELECTED_REASON: ${{ steps.get-label.outputs.SELECTED_REASON }}
       run: |
@@ -158,7 +161,7 @@ runs:
         Write-Output "::group::Adding the comment..."
 
         $repoUrl = "${{ github.repositoryUrl }}"
-        $issueNumber = "${{ github.event.issue.number }}"
+        $issueNumber = "$env:ISSUE_NUMBER"
         $label = "$env:SELECTED_LABEL"
         $reason = "$env:SELECTED_REASON"
 
