--- a/action.yml
+++ b/action.yml
@@ -166,8 +166,8 @@ runs:
         $reason = "$env:SELECTED_REASON"
 
         $body = 
-          "The AI has selected the label ``$label`` for this issue because: `n" +
-          "$reason `n"
+          "The AI has selected the label ``$label`` for this issue and gave the following reason: `n" +
+          "> $reason `n"
           "If this is not correct, you can change the label to the correct one."
 
         gh issue comment --repo "$repoUrl" $issueNumber --body "$body"
