--- a/action.yml
+++ b/action.yml
@@ -84,7 +84,7 @@ runs:
         } elseif ($env:LABEL_PATTERN) {
           $labelRegex = "$env:LABEL_PATTERN"
           $labelSelector = "[.[] | select(.name | test(`"$labelRegex`"))]"
-          $labelsResult = gh label list --repo "$repoUrl" --json name --jq "$labelSelector"
+          $labelsResult = gh label list --repo "$repoUrl" --json name --jq "$labelSelector" --limit 100
           $labels = $labelsResult | ConvertFrom-Json
           Write-Output "::debug::$labels"
           if (-not $labels) {
