--- a/backend/labeled-by-ai.AppHost/labeled-by-ai.AppHost.csproj
+++ b/backend/labeled-by-ai.AppHost/labeled-by-ai.AppHost.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.0.0" />
     <PackageReference Include="Aspire.Hosting.Azure.CognitiveServices" Version="9.0.0" />
     <PackageReference Include="Aspire.Hosting.Azure.Functions" Version="9.0.0-preview.5.24551.3" />
+    <PackageReference Include="CommunityToolkit.Aspire.Hosting.Ollama" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
