--- a/backend/LabeledByAI/LabeledByAI.csproj
+++ b/backend/LabeledByAI/LabeledByAI.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="9.0.0-preview.9.24556.5" />
+    <PackageReference Include="Octokit.GraphQL" Version="0.4.0-beta" />
   </ItemGroup>
 
   <ItemGroup>
